syntax = "proto3";
package sac.v1;
option go_package = "g.echo.tech/dev/sac/gen/sac/v1;sacv1";

import "google/protobuf/timestamp.proto";
import "sac/v1/common.proto";

message Group {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 owner_id = 4;
  string claude_md_template = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  UserBrief owner = 8;
}

message GroupWithMemberCount {
  Group group = 1;
  int32 member_count = 2;
}

message GroupMember {
  int64 id = 1;
  int64 group_id = 2;
  int64 user_id = 3;
  string role = 4;
  google.protobuf.Timestamp created_at = 5;
  UserBrief user = 6;
}

message CreateGroupRequest {
  string name = 1;
  string description = 2;
  optional int64 owner_id = 3;
}

message UpdateGroupRequest {
  optional string name = 1;
  optional string description = 2;
  optional string claude_md_template = 3;
}

message AddMemberRequest {
  int64 user_id = 1;
  string role = 2;
}

message UpdateMemberRoleRequest {
  string role = 1;
}

message GroupTemplateResponse {
  string claude_md_template = 1;
}

message UpdateTemplateRequest {
  string claude_md_template = 1;
}

message GroupListResponse {
  repeated GroupWithMemberCount groups = 1;
}

message GroupMemberListResponse {
  repeated GroupMember members = 1;
}
